<!DOCTYPE resources [
    <!ENTITY defaultMailAdress "\@student.ecp.fr">
    ]>

<resources>
    <!-- Global -->
    <string name="app_name">CS&amp;B</string>
    <string name="action_settings">Settings</string>
    <string name="defaultMailAdress">&defaultMailAdress;</string>
    <!-- Item List -->
    <string name="title_activity_item_list">ItemList</string>
    <!-- Main Activity -->
    <string name="hintConnexionMail">prenom.nom</string>
    <string name="hintConnexionPassword">mot de passe</string>
    <string name="logCsbDescription">Logo CS&amp;B</string>
    <string name="inscriptionTextButton">Incription</string>
    <string name="infoAppAccueil">Achète et vends de tout sur le campus</string>
    <string name="labelTitreConnexion">Connecte toi pour accéder aux offres !</string>
    <string name="connexionTextButton">Connexion</string>
    <string name="connexionError">Login ou mot de passe incorrect</string>
    <string name="errorSignUp">Erreur lors de l\'inscription. Vous devez utiliser prenom.nom SANS &defaultMailAdress; sur le formulaire.\nL\'adresse email peut aussi être déjà utilisée.</string>
    <!-- Sign up -->
    <string name="title_activity_sign_up">signUp</string>
    <string name="infoSignUp">Inscrivez-vous sur CSB&amp;S afin d\'échanger partout sur le campus.\nUtilisez votre adresse student.ecp.fr pour vous enregistrer.\nUn mail vous sera envoyé afin de confirmer votre adresse.</string>
    <string name="labelSignUpMail">prenom.nom du mail</string>
    <string name="labelSignUpPwd">Mot de passe</string>
    <string name="buttonSignUp">Créer mon compte</string>
    <string name="infoPostSignUp">Un mail vous a été envoyé, cliquez sur le lien qu\'il contient pour valider votre compte.\nAdresse utilisée : </string>
    <string name="labelSignUpNom">Nom</string>
    <string name="labelSignUpPrenom">Prénom</string>
    <string name="labelSignUpTel">Numéro</string>
    <string name="hintEmail">Sans &defaultMailAdress;</string>

    <!-- addItem -->
    <string name="infoAddItem">Ce formulaire vous permet de mettre en vente un objet ou d\'emettre votre propre proposition d\'achat.</string>

    <!-- extended Item -->
    <string name="infoExtendedItem">Contacte moi dès maintenant :</string>
</resources>
