<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_back">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="274dp"
            android:layout_height="155dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/csb_logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/logCsbDescription" />

        <Button
            android:id="@+id/buttonInscription"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="252dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_back"
            android:text="@string/inscriptionTextButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInfoAccueil"
            tools:text="S'inscrire" />

        <TextView
            android:id="@+id/textInfoAccueil"
            android:layout_width="301dp"
            android:layout_height="62dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/infoAppAccueil"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/labelTitreConnexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/labelTitreConnexion"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp"
                android:typeface="normal"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputLogin"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_back"
                android:ems="10"
                android:hint="@string/hintConnexionMail"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textCursorDrawable="@null"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelTitreConnexion" />

            <EditText
                android:id="@+id/inputPassword"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="194dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_back"
                android:ems="10"
                android:hint="@string/hintConnexionPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textCursorDrawable="@null"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLogin" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_back"
                android:text="@string/connexionTextButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <TextView
                android:id="@+id/errorLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/connexionError"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/inscriptionError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/errorSignUp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonInscription" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>