<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_back">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewInfoSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_back"
            android:padding="10sp"
            android:text="@string/infoSignUp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputSignUpLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/border_back"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            app:layout_constraintLeft_toRightOf="@+id/labelSignUpPassword"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfoSignUp" />

        <EditText
            android:id="@+id/inputSignUpPrenom"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border_back"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toTopOf="@+id/labelSignUpPrenom"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/inputSignUpPassword"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_back"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toTopOf="@+id/labelSignUpLogin"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/labelSignUpLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:padding="5sp"
            android:text="@string/labelSignUpPwd"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/inputSignUpPassword"
            app:layout_constraintTop_toBottomOf="@+id/labelSignUpPassword" />

        <TextView
            android:id="@+id/labelSignUpPrenom"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="17dp"
            android:padding="5sp"
            android:text="@string/labelSignUpPrenom"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintRight_toLeftOf="@+id/inputSignUpPrenom"
            app:layout_constraintTop_toBottomOf="@+id/labelSignUpLogin" />

        <TextView
            android:id="@+id/labelSignUpNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="19dp"
            android:padding="5sp"
            android:text="@string/labelSignUpNom"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintRight_toLeftOf="@+id/inputSignUpNom"
            app:layout_constraintTop_toBottomOf="@+id/labelSignUpPrenom" />

        <EditText
            android:id="@+id/inputSignUpNom"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border_back"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toTopOf="@+id/labelSignUpNom"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/labelSignUpTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:padding="5sp"
            android:text="@string/labelSignUpTel"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintRight_toLeftOf="@+id/inputSignUpTel"
            app:layout_constraintTop_toBottomOf="@+id/labelSignUpNom" />

        <TextView
            android:id="@+id/labelSignUpPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/labelSignUpMail"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/inputSignUpLogin"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/inputSignUpTel"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border_back"
            android:ems="10"
            android:inputType="phone"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toTopOf="@+id/labelSignUpTel"
            android:layout_marginTop="1dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/border_back"
            android:text="@string/buttonSignUp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/labelSignUpTel" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
